--- a/deploy/htdocs/version/src/inc/script/app/component/button/button-start-advertising/button-start-advertising.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/button/button-start-advertising/button-start-advertising.html
@@ -1,6 +1,6 @@
 <div class="component-button-start-advertising">
 	<span class="background"></span>
-	<button class="start-advertising button" data-bind="tap: handleClick, attr: { title: title }">
+	<button class="start-advertising button" data-bind="tap: handleClick, attr: { title: title }, gaTrackEvent: {category: 'startAdvertising', action:'click', label: '-'}">
 		<span class="icon" data-bind="icon: 'circle-arrow-right'"></span>
 		<span class="label">{{label}}</span>
 	</button>
