--- a/deploy/htdocs/version/src/inc/script/app/component/footer/footer.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/footer/footer.html
@@ -4,10 +4,10 @@
 			<span class="icon" data-bind="icon: 'logo'"></span>
 		</h1>
 		<ul class="contact-options" data-bind="with: dataManager.settingsModel.initDataModel.contactOptions">
-			<li class="contact-option">
+			<li class="contact-option" data-bind="gaTrackEvent: {category: 'footerContact', action: 'click', label:  'email'}">
 				<a class="link link-main" href="mailto:{{$data.email.emailAddress}}?SUBJECT={{$data.email.emailSubject}}&BODY={{$data.email.emailBody}}">{{$data.email.emailAddress}}</a>
 			</li>
-			<li class="contact-option">
+			<li class="contact-option" data-bind="gaTrackEvent: {category: 'footerContact', action: 'click', label:  'telephone'}">
 				<a class="link link-main" href="tel:{{$data.phone.phoneNumber}}">{{$data.phone.phoneNumber}}</a>
 			</li>
 		</ul>
@@ -15,27 +15,27 @@
 	<section class="middle-section">
 		<nav class="call-to-actions left">
 			<ul class="full-list" data-bind="foreach: $data.mainLinks">
-				<li>
+				<li data-bind="gaTrackEvent: {category: 'footerMenu', action: 'click', label:  '/' + $data.target}">
 					<!-- ko template: { name: 'link-main', data: $data } --><!-- /ko -->
 				</li>
 			</ul>
 		</nav>
 		<nav class="call-to-actions middle" data-bind="foreach: $data.secondaryLinks">
 			<ul class="half-list" data-bind="foreach: $data">
-				<li>
+				<li data-bind="gaTrackEvent: {category: 'footerMenu', action: 'click', label:  '/' + $data.target}">
 					<!-- ko template: { name: 'link-main', data: $data } --><!-- /ko -->
 				</li>
 			</ul>
 		</nav>
 		<nav class="call-to-actions right">
 			<ul class="full-list social" data-bind="with: $data.social">
-				<li>
+				<li data-bind="gaTrackEvent: {category: 'social', action:'click', label: 'footer.twitter'}">
 					<!-- ko template: { name: 'link-icon', data: Object.assign({icon: 'twitter'}, $data.twitter) } --><!-- /ko -->
 				</li>
-				<li>
+				<li data-bind="gaTrackEvent: {category: 'social', action:'click', label: 'footer.vimeo'}">
 					<!-- ko template: { name: 'link-icon', data: Object.assign({icon: 'vimeo'}, $data.vimeo) } --><!-- /ko -->
 				</li>
-				<li>
+				<li data-bind="gaTrackEvent: {category: 'social', action:'click', label: 'footer.linkedin'}">
 					<!-- ko template: { name: 'link-icon', data: Object.assign({icon: 'linkedin'}, $data.linkedin) } --><!-- /ko -->
 				</li>
 			</ul>
