--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-secondary/block-hero-secondary.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-secondary/block-hero-secondary.html
@@ -18,6 +18,11 @@
 					name: 'button/button-circle-arrow',
 					onComplete: $root.controller.callbackCounter.get(),
 					options: {
+						gaTracking: {
+							category: 'heroSecondary',
+							action: 'click',
+							label: data.heading + '|' + data.link.title
+						},
 						action: data.link,
 						arrowDirection: $root.Direction.DOWN,
 						arrowPosition: $root.Alignment.LEFT,
