--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-image-with-content/block-image-with-content.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-image-with-content/block-image-with-content.html
@@ -18,6 +18,11 @@
 						name: 'button/button-main',
 						onComplete: $root.controller.callbackCounter.get(),
 						options: {
+							gaTracking: {
+								category: 'imageWithContent',
+								action: 'click',
+								label: data.heading + '|' + data.link.title,
+							},
 							action: data.link,
 							size: $root.ButtonSize.LARGE,
 							disabled: $root.findOutMoreDisabled
