--- a/deploy/htdocs/version/src/inc/script/app/component/button/button-call-to-reach/button-call-to-reach.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/button/button-call-to-reach/button-call-to-reach.html
@@ -1,4 +1,4 @@
-<button class="component-button-call-to-reach button" data-bind="css: size, tap: handleClick, attr: { title: title }, gaTrackEvent: {category: 'callToReach', action:'click', label: '-'}">
+<button class="component-button-call-to-reach button" data-bind="css: size, tap: handleClick, attr: { title: title }">
 	<span class="icon" data-bind="icon: icon"></span>
 	<span class="text">{{label}}</span>
 </button>
