--- a/deploy/htdocs/version/src/inc/script/app/component/header/header.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/header/header.html
@@ -15,6 +15,10 @@
 			onComplete: $root.controller.callbackCounter.get(),
 			options: {
 				icon: 'contact',
+				gaTracking: {
+					category: 'callToReach',
+					action: 'click'
+				},
 				action: {
 					label: dataManager.settingsModel.initDataModel.contactOptions.phone.phoneNumber,
 					title: dataManager.settingsModel.initDataModel.contactOptions.phone.phoneNumber,
