--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-latest/block-latest.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-latest/block-latest.html
@@ -8,17 +8,24 @@
 					onComplete: $root.controller.callbackCounter.get(),
 					options: {
 						action: data.link,
+						gaTracking: {
+							category: 'latest',
+							action: 'click',
+							label: data.title
+						},
 						size: $root.ButtonSize.LARGE,
 						disabled: $root.findOutMoreDisabled
 					}
 				} --><!-- /ko -->
 			</header>
 			<div class="latest-articles" data-bind="foreach: data.articles">
-				<!-- ko component: {
-					name: 'block/block-article-teaser',
-					onComplete: $root.controller.callbackCounter.get(),
-					options: $data
-				} --><!-- /ko -->
+				<div data-bind="gaTrackEvent: {category: 'latest', action:'click', label:  'articleTeaser|' + $data.heading}">
+					<!-- ko component: {
+						name: 'block/block-article-teaser',
+						onComplete: $root.controller.callbackCounter.get(),
+						options: $data,
+					} --><!-- /ko -->
+				</div>
 			</div>
 		</div>
 	</div>
