--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-map-secondary/block-map-secondary.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-map-secondary/block-map-secondary.html
@@ -11,6 +11,11 @@
 						name: 'button/button-main',
 						onComplete: $root.controller.callbackCounter.get(),
 						options: {
+							gaTracking: {
+								category: 'heroSecondary',
+								action: 'click',
+								label: data.heading + '|' + data.link.title
+							},
 							action: data.link,
 							size: $root.ButtonSize.LARGE,
 							disabled: $root.findOutMoreDisabled
