--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-small-info/block-small-info.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-small-info/block-small-info.html
@@ -12,6 +12,11 @@
 					name: 'button/button-main',
 					onComplete: $root.controller.callbackCounter.get(),
 					options: {
+						gaTracking: {
+							category: 'smallInfo',
+							action: 'click',
+							label: data.heading + '|' + data.link.title
+						},
 						action: data.link,
 						size: $root.ButtonSize.LARGE,
 						disabled: $root.findOutMoreDisabled
