Add missing google analytics

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-audio-fragment/block-audio-fragment.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-audio-fragment/block-audio-fragment.html
@@ -18,7 +18,8 @@
 			name: 'audio-player',
 			onComplete: $root.controller.callbackCounter.get(),
 			options: {
-				file: data.file
+				file: data.file,
+				title: data.heading
 			}
 		} --><!-- /ko -->
 	</div>
