--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-page-not-found/block-page-not-found.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-page-not-found/block-page-not-found.html
@@ -11,6 +11,11 @@
 				name: 'button/button-main',
 				onComplete: $root.controller.callbackCounter.get(),
 				options: {
+					gaTracking: {
+						category: 'pageNotFound',
+						action: 'click',
+						label: data.link..title
+					},
 					action: data.link,
 					theme: $root.Theme.LIGHT,
 					size: $root.ButtonSize.LARGE
