--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-blog-post/block-blog-post.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-blog-post/block-blog-post.html
@@ -31,7 +31,7 @@
 				</li>
 
 				<!-- ko foreach: social -->
-					<li>
+					<li data-bind="gaTrackEvent: {category: 'blogPost', action: 'click', label:  $parent.heading + '|' + $data.title}">
 						<!-- ko template: {name: 'link-main', data: $data} --><!-- /ko -->
 					</li>
 				<!-- /ko -->
@@ -43,6 +43,11 @@
 				name: 'button/button-tag',
 				onComplete: $root.controller.callbackCounter.get(),
 				options: {
+					gaTracking: {
+						category: 'blogPost',
+						action: 'click',
+						label: 'tag|' + $data.title
+					},
 					action: $data,
 					size: $root.ButtonSize.LARGE
 				}
