--- a/deploy/htdocs/version/src/inc/style/asset/_scrollbar.scss
+++ b/deploy/htdocs/version/src/inc/style/asset/_scrollbar.scss
@@ -10,6 +10,7 @@
 			padding-right: 0;
 			overflow-y: hidden;
 			overflow-x: scroll;
+			-webkit-overflow-scrolling: touch;
 		}
 
 		.scroll-bar {
@@ -32,6 +33,7 @@
 		overflow-y: scroll;
 		overflow-x: hidden;
 		box-sizing: content-box;
+		-webkit-overflow-scrolling: touch;
 	}
 
 	.scroll-bar {
