--- a/deploy/htdocs/version/src/inc/style/component/block/_block-small-info.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-small-info.scss
@@ -16,6 +16,11 @@
 		vertical-align: top;
 	}
 
+	.overrule-overlap {
+		background: $colorWhite;
+		padding: $sizeGrid;
+	}
+
 	.copy {
 		margin-top: $sizeGrid;
 	}
