Update the slide out panel to work better on iPads without hiding all the input fields on focus.
ready #406

--- a/deploy/htdocs/version/src/inc/style/component/slideout-panel/_default-slideout-panel.scss
+++ b/deploy/htdocs/version/src/inc/style/component/slideout-panel/_default-slideout-panel.scss
@@ -35,6 +35,12 @@
 		transform: translate(0, 0);
 	}
 
+	.is-ipad & {
+		.input-focussed & {
+			position: absolute;
+		}
+	}
+
 	@include respond-to(SMALL) {
 		max-width: 100%;
 
