Fix scaling issues on statistic slides ready #400

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-map-tertiary/slide/slide-cards/slide-cards.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-map-tertiary/slide/slide-cards/slide-cards.html
@@ -27,8 +27,7 @@
 	</div>
 
 	<div class="slide-title">
-		<span class="pagination-number"
-		      data-bind="html: $root.StringUtils.padLeft((data.index + 1).toString(), 2, '0')"></span>
+		<span class="pagination-number" data-bind="html: $root.StringUtils.padLeft((data.index + 1).toString(), 2, '0')"></span>
 		<h3 class="heading heading-01" data-bind="html: data.slideData.heading"></h3>
 	</div>
 </div>
