--- a/deploy/htdocs/version/src/inc/style/component/block-map-tertiary-slide/_slide-vertical-list.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block-map-tertiary-slide/_slide-vertical-list.scss
@@ -30,11 +30,13 @@
 		vertical-align: top;
 	}
 
-	@include respond-to(MEDIUM) {
+	@include respond-to(LARGE) {
 		.statistic:not(:last-child) {
 			margin-bottom: $sizeGrid / 2;
 		}
+	}
 
+	@include respond-to(MEDIUM) {
 		.statistic {
 
 			.copy {
