--- a/deploy/htdocs/version/src/inc/style/component/block-map-slide/_slide-text.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block-map-slide/_slide-text.scss
@@ -1,26 +1,29 @@
 .component-slide-text {
 	.slide-title {
-		@include size($sizeGrid * 12, auto);
-		@include pos(50%, auto, auto, -$sizeGrid * 3);
-		transform: translateY(-50%);
-		position: absolute;
+		width: $sizeGrid * 9;
 
 		.heading-01 {
 			margin-bottom: $sizeGrid / 2;
 		}
 	}
 
+	@include respond-to(LARGE){
+		.slide-title {
+			width: $sizeGrid * 7.5;
+		}
+	}
+
+	@include respond-to(MEDIUM) {
+		.slide-title {
+			width: $sizeGrid * 6;
+		}
+	}
+
 	@include respond-to(SMALL) {
 		.slide-title {
 			@include size(100%, auto);
-			@include pos(auto, 0, 0, 0);
 			position: absolute;
-			transform: none;
-			padding: 0 $sizeGrid * 2;
-
-			.heading-01 {
-				font-size: mobile-size(9.5rem);
-			}
+			bottom: 0;
 		}
 	}
 }
