Fix blog post issues ready #413

--- a/deploy/htdocs/version/src/inc/style/component/block/_block-blog-post.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-blog-post.scss
@@ -72,6 +72,12 @@
 		}
 	}
 
+	@include respond-to(LARGE) {
+		.site-frame {
+			padding-left: $sizeGrid * 2;
+			padding-right: $sizeGrid * 2;
+		}
+	}
 	@include respond-to(SMALL) {
 
 		.date {
