--- a/deploy/htdocs/version/src/inc/script/app/component/slideout-panel/global-slideout-panel/contact/contact.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/slideout-panel/global-slideout-panel/contact/contact.html
@@ -1,5 +1,18 @@
 <form class="component-slideout-panel_contact" data-bind="with: data, submit: onSubmit" novalidate>
 
+	<!-- ko component: {
+		name: 'button/button-tertiary',
+		onComplete: $root.controller.callbackCounter.get(),
+		options: {
+			action: {
+				event: $root.handleCallClick.bind($root),
+				label: dataManager.settingsModel.initDataModel.data.contactOptions.phone.phoneNumber,
+				title: dataManager.settingsModel.initDataModel.data.contactOptions.phone.phoneNumber
+			},
+			size: $root.ButtonSize.LARGE
+		}
+	} --><!-- /ko -->
+
 	<h3 class="sub-title copy copy-01" data-bind="html: subHeading"></h3>
 	<h2 class="heading-06 heading" data-bind="html: heading"></h2>
 
