Ticket #432 - Fixed 404 pages

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-page-not-found/block-page-not-found.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-page-not-found/block-page-not-found.html
@@ -14,7 +14,7 @@
 					gaTracking: {
 						category: 'pageNotFound',
 						action: 'click',
-						label: data.link..title
+						label: data.link.title
 					},
 					action: data.link,
 					theme: $root.Theme.LIGHT,
