[Market Map] Option says "Select a State" on mobile but all the options are cities. Need to be changed to say "Select an City"
ready #441

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-market-map/block-market-map.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-market-map/block-market-map.html
@@ -51,7 +51,7 @@
 		<!-- /ko -->
 
 		<!-- ko ifnot: $root.selectedMarket() -->
-		{{lt:global.form.select.state}}
+		{{lt:global.form.select.city}}
 		<!-- /ko -->
 	</div>
 
