[Market Map] Search button shows it is clickable but doesn’t do anything.

--- a/deploy/htdocs/version/src/inc/style/component/_market-search.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_market-search.scss
@@ -42,6 +42,7 @@
 		color: $colorWhite;
 		font: 700 1rem/1 $fontOpenSans;
 		text-transform: uppercase;
+		cursor: default;
 	}
 
 	.note-wrapper {
