--- a/deploy/htdocs/version/src/inc/script/app/component/button/button-circle-icon/button-circle-icon.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/button/button-circle-icon/button-circle-icon.html
@@ -2,9 +2,7 @@
 	attr: {
 		title: title
 	},
-	events: [
-		[MouseEventHelper.CLICK, $root.handleClick.bind($root)]
-	]
+	tap: $root.handleClick.bind($root)
 ">
 	<span class="icon"data-bind="icon: data.icon"></span>
 </button>
