Add the option to initialize the image sequence manually Wait for image sequence setup until the blockMap transitionIn is triggered

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-map/block-map.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-map/block-map.html
@@ -15,7 +15,8 @@
 						name: 'image-sequence',
 						onComplete: $root.controller.callbackCounter.get($root.controller.handleImageSequenceReady.bind($root.controller)),
 						options: {
-							imageSequence: data.imageSequence
+							imageSequence: data.imageSequence,
+							initializeManually: true
 						}
 					} --><!-- /ko -->
 				</div>
