New AudienceTrak button/link ready #451

--- a/deploy/htdocs/version/src/inc/script/app/component/header/header.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/header/header.html
@@ -28,7 +28,24 @@
 				disabled: $root.callButtonDisabled
 			}
 		} --><!-- /ko -->
-
+		<!-- ko component: {
+				name: 'button/button-header',
+				onComplete: $root.controller.callbackCounter.get(),
+				options: {
+					gaTracking: {
+						category: 'login',
+						action: 'click'
+					},
+					action: {
+						label: 'Log in AudienceTrak',
+						title: 'Log in AudienceTrak',
+						target: 'https://spectrumreach.brandcdn.com',
+						type: $root.LinkType.EXTERNAL
+					},
+					size: $root.ButtonSize.LARGE,
+					disabled: $root.callButtonDisabled
+				}
+			} --><!-- /ko -->
 		<!-- ko component: {
 			name: 'button/button-menu',
 			onComplete: $root.controller.callbackCounter.get(),
