Update the copy on the AudienceTrak button
ready #451

--- a/deploy/htdocs/version/src/inc/script/app/component/header/header.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/header/header.html
@@ -37,8 +37,8 @@
 						action: 'click'
 					},
 					action: {
-						label: 'Log in AudienceTrak',
-						title: 'Log in AudienceTrak',
+						label: 'Customer Login',
+						title: 'Customer Login',
 						target: 'https://spectrumreach.brandcdn.com',
 						type: $root.LinkType.EXTERNAL
 					},
