--- a/deploy/htdocs/version/src/inc/style/component/button/_button-call-to-reach.scss
+++ b/deploy/htdocs/version/src/inc/style/component/button/_button-call-to-reach.scss
@@ -7,7 +7,6 @@
 
 	.theme-light & {
 		color: $colorWhite;
-
 	}
 
 	.enable-solid-background & {
@@ -56,6 +55,7 @@
 
 		.text {
 			font-size: mobile-size(2.2rem);
+			color: $colorPrimary;
 		}
 
 		.icon {
