Task #459: Changed templates for prerender

--- a/deploy/htdocs/themes/custom/spectrum/templates/html.html.twig
+++ b/deploy/htdocs/themes/custom/spectrum/templates/html.html.twig
@@ -23,7 +23,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <js-placeholder token="{{ placeholder_token|raw }}">
 <script> window.prerenderReady = false; setTimeout(function(){window.prerenderReady = true;}, 20000) </script>
 </head>
-<body>
+<body data-gaia-container="main">
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WFHFPM"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
