Task #449: Added inline-block style for images

--- a/deploy/htdocs/version/src/inc/style/component/block/_block-text.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-text.scss
@@ -22,24 +22,11 @@
 		&:not(:first-child) {
 			margin-top: $sizeGrid;
 		}
-	}
 
-	.align-left,
-	.align-right,
-	.align-center {
-		display: inline-block;
-	}
-
-	.align-left {
-		text-align: left;
-	}
-
-	.align-center {
-		text-align: center;
-	}
-
-	.align-right {
-		text-align: right;
+		img	{
+			display: inline-block;
+			vertical-align: middle;
+		}
 	}
 
 	@include respond-to(LARGE) {
