call to action button in header is blue for tablet and mobile
ready #447

--- a/deploy/htdocs/version/src/inc/style/component/button/_button-call-to-reach.scss
+++ b/deploy/htdocs/version/src/inc/style/component/button/_button-call-to-reach.scss
@@ -48,6 +48,10 @@
 	@include respond-to(MEDIUM) {
 		@include size(auto, $sizeGrid * 2);
 		padding: 0 $sizeGrid;
+
+		.theme-light & {
+			color: $colorPrimary;
+		}
 	}
 
 	@include respond-to(SMALL) {
@@ -55,7 +59,7 @@
 
 		.text {
 			font-size: mobile-size(2.2rem);
-			color: $colorPrimary;
+			//color: $colorPrimary;
 		}
 
 		.icon {
